--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,30 @@
-streamlit
-deepface==0.0.79
-opencv-python-headless==4.8.0.76
-tensorflow==2.12.0
-keras==2.12.0
-pandas
-numpy
+
+streamlit==1.45.0
+deepface==0.0.93
+opencv-python-headless==4.12.0.88
+tensorflow==2.19.0
+keras==2.19.0
+
+
+numpy==2.1.3
+pandas==2.2.3
 email-validator
 passlib
 python-dotenv
+requests==2.32.3
+
+
+mtcnn==1.0.0
+retina-face==0.0.17
+Pillow==11.2.1
+
+
+jinja2==3.1.6
+streamlit-ace==0.1.1        
+pydeck==0.9.1                
+phonenumbers==9.0.9          
+
+
+opencv-python-headless==4.12.0.88  
+protobuf==5.29.5              
+watchdog==6.0.0              
