--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ deepface==0.0.93
 opencv-python-headless==4.12.0.88
 tensorflow==2.12.0
 keras==2.12.0
-numpy==2.1.3
+numpy==1.23.5
 pandas==2.2.3
-email-validator
-passlib
-python-dotenv
+email-validator==2.2.0
+passlib==1.7.4
+python-dotenv==1.1.1
 mtcnn==1.0.0
 retina-face==0.0.17
 Pillow==11.2.1
