--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,6 @@
-streamlit==1.45.0
-deepface==0.0.93
-opencv-python-headless==4.7.0.72
-tensorflow==2.12.0
-keras==2.12.0
-numpy==1.23.5
-pandas==2.2.3
-email-validator==2.2.0
-passlib==1.7.4
-python-dotenv==1.1.1
-mtcnn==1.0.0
-retina-face==0.0.17
-Pillow==11.2.1
-requests==2.32.3
-jinja2==3.1.6
+streamlit
+pandas
+numpy
+Pillow
+DeepFace
+tensor flow
