--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,38 @@
+# Core UI & App Framework
+streamlit==1.45.0
+streamlit-ace==0.1.1
 
-deepface                  0.0.93
-distro                    1.9.0
-fastapi                   0.95.0
-filelock                  3.18.0
-fire                      0.7.0
-Flask                     3.1.0
-flask-cors                6.0.1
-flatbuffers               25.2.10
-fonttools                 4.58.0
-gast                      0.6.0
-gdown                     5.2.0
-gitdb                     4.0.12
-GitPython                 3.1.44
-google-pasta              0.2.0
-grpcio                    1.73.1
-gunicorn                  23.0.0
-h11                       0.16.0
-h5py                      3.14.0
-httpcore                  1.0.9
-httpx                     0.28.1
-idna                      3.10
-itsdangerous              2.2.0
-Jinja2                    3.1.6
-jiter                     0.9.0
-joblib                    1.5.1
-jsonschema                4.23.0
-jsonschema-specifications 2025.4.1
-keras                     3.10.0
-kiwisolver                1.4.8
-libclang                  18.1.1
-lz4                       4.4.4
-Markdown                  3.8.2
-markdown-it-py            3.0.0
-MarkupSafe                3.0.2
-matplotlib                3.10.3
-mdurl                     0.1.2
-ml_dtypes                 0.5.1
-mtcnn                     1.0.0
-namex                     0.1.0
-narwhals                  1.37.1
-networkx                  3.4.2
-numpy                     2.1.3
-openai                    1.77.0
-opencv-python             4.12.0.88
-opt_einsum                3.4.0
-optree                    0.16.0
-packaging                 24.2
-pandas                    2.2.3
-phonenumbers              9.0.9
-pillow                    11.2.1
-pip                       25.1.1
-protobuf                  5.29.5
-pyarrow                   20.0.0
-pydantic                  1.10.22
-pydeck                    0.9.1
-Pygments                  2.19.2
-pyparsing                 3.2.3
-pyproject_hooks           1.2.0
-PyQt5                     5.15.11
-PyQt5-Qt5                 5.15.2
-PyQt5_sip                 12.17.0
-PySocks                   1.7.1
-python-dateutil           2.9.0.post0
-python-engineio           4.12.0
-python-socketio           5.13.0
-pytz                      2025.2
-referencing               0.36.2
-requests                  2.32.3
-retina-face               0.0.17
-rich                      14.0.0
-rpds-py                   0.24.0
-setuptools                80.9.0
-simple-websocket          1.1.0
-six                       1.17.0
-smmap                     5.0.2
-sniffio                   1.3.1
-soupsieve                 2.7
-starlette                 0.26.1
-streamlit                 1.45.0
-streamlit-ace             0.1.1
+# Facial Recognition & CV
+deepface==0.0.93
+opencv-python-headless==4.12.0.88
+mtcnn==1.0.0
+retina-face==0.0.17
+Pillow==11.2.1
 
+# ML + Model Inference
+tensorflow==2.12.0
+keras==2.12.0
+numpy==2.1.3
+h5py==3.14.0
+
+# Data & Validation
+pandas==2.2.3
+email-validator
+phonenumbers==9.0.9
+python-dateutil==2.9.0.post0
+pytz==2025.2
+
+# Backend Utilities
+passlib
+python-dotenv
+requests==2.32.3
+jinja2==3.1.6
+
+# Optional Enhancers
+pydeck==0.9.1            # If you're using maps or charts
+watchdog==6.0.0          # Streamlit file monitoring
+tqdm==4.67.1             # Progress bars during heavy ops
+rich==14.0.0             # Console styling (optional logging)
+
+# Hugging Face / OpenAI Tools (if needed for future demo)
+openai==1.77.0
