--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,7 @@
-# Core UI & App Framework
-streamlit==1.45.0
-streamlit-ace==0.1.1
-
-# Facial Recognition & CV
+streamlit
 deepface==0.0.93
 opencv-python-headless==4.12.0.88
-mtcnn==1.0.0
-retina-face==0.0.17
-Pillow==11.2.1
-
-# ML + Model Inference
-tensorflow==2.12.0
-keras==2.12.0
-numpy==2.1.3
-h5py==3.14.0
-
-# Data & Validation
-pandas==2.2.3
-email-validator
-phonenumbers==9.0.9
-python-dateutil==2.9.0.post0
-pytz==2025.2
-
-# Backend Utilities
-passlib
-python-dotenv
-requests==2.32.3
-jinja2==3.1.6
-
-# Optional Enhancers
-pydeck==0.9.1            # If you're using maps or charts
-watchdog==6.0.0          # Streamlit file monitoring
-tqdm==4.67.1             # Progress bars during heavy ops
-rich==14.0.0             # Console styling (optional logging)
-
-# Hugging Face / OpenAI Tools (if needed for future demo)
-openai==1.77.0
+tensorflow==2.16.0
+pandas
+numpy
+Pillow
