--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-streamlit
+streamlit==1.45.0
 deepface==0.0.93
-pandas
-numpy
-Pillow
-tensorflow==2.16.0
-tf-keras==2.16.0
+opencv-python-headless==4.12.0.88
+tensorflow==2.12.0
+numpy==2.1.3
+pandas==2.2.3
+Pillow==11.2.1
+email-validator
+passlib
+python-dotenv
+mtcnn==1.0.0
+phonenumbers==9.0.9
+requests==2.32.3
+jinja2==3.1.6
+python-dateutil==2.9.0.post0
+pytz==2025.2
+watchdog==6.0.0
+tqdm==4.67.1
+rich==14.0.0
