--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 streamlit==1.45.0
 deepface==0.0.93
-opencv-python-headless==4.12.0.88
+opencv-python-headless==4.6.0.66     # Compatible with numpy <1.24
 tensorflow==2.12.0
-numpy==1.23.5
+keras==2.12.0
+numpy==1.23.5                        # Works across all packages
 pandas==2.2.3
 Pillow==11.2.1
 email-validator
 passlib
 python-dotenv
 mtcnn==1.0.0
+retina-face==0.0.17
 phonenumbers==9.0.9
 requests==2.32.3
 jinja2==3.1.6
